--- a/backend/ShareBook.API/ShareBook.API.Services.Abstractions/ShareBook.API.Services.Abstractions.csproj
+++ b/backend/ShareBook.API/ShareBook.API.Services.Abstractions/ShareBook.API.Services.Abstractions.csproj
@@ -12,6 +12,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
   </ItemGroup>
 
 </Project>
