--- a/backend/ShareBook.API/ShareBook.API.Services/ShareBook.API.Services.csproj
+++ b/backend/ShareBook.API/ShareBook.API.Services/ShareBook.API.Services.csproj
@@ -8,11 +8,14 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ShareBook.API.Domain\ShareBook.API.Domain.csproj" />
-    <ProjectReference Include="..\ShareBook.API.Services.Abstractions\ShareBook.API.Services.Abstractions.csproj" />
+    <ProjectReference
+      Include="..\ShareBook.API.Services.Abstractions\ShareBook.API.Services.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
   </ItemGroup>
 
 </Project>
