--- a/backend/ShareBook.API/ShareBook.API/Properties/launchSettings.json
+++ b/backend/ShareBook.API/ShareBook.API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5025",
+      "applicationUrl": "http://192.168.1.107:8080",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
